NEWS file for Transmission <http://www.transmissionbt.com/>

1.10 (2008/xx/yy)
- Mac:
   + Window when adding torrents to select files and other settings
   + Leopard: Group dividers
   + Use the file icon as the per-torrent action button

1.03 (2008/xx/yy)
- All Platforms:
   + Fix handshake bug with peers that support LTEP

1.02 (2008/01/22)
- All Platforms:
   + Fix 1.00 bug that choked some models of routers
   + Fix 1.00 crash in peer handshake
   + Fix 1.01 bug that sometimes froze the app for a long time
   + Minor improvements to the command-line client
- GTK+
   + Fix crash when removing a torrent while its details window is open
   + Better compliance with the Gnome interface guidelines
   + I18N fixes
   + Updated Dutch translation
   + Various other interface additions and improvements

1.01 (2008/01/11)
- All Platforms:
   + Fix 1.00 freezing issue
   + Fix 1.00 assertion failure
   + Improve initial connection speed
   + Added connection throttle to avoid router overload
   + Improve reconnection to peers with imperfect network connections
   + Fix crashes on architectures that require strict alignment
- OS X:
   + Leopard: Double-click icon to reveal in Finder, progress string to toggle selected and total, and anywhere else to toggle the inspector
   + Leopard: Better behavior with Time Machine
   + Fix bugs with Clutch support
- GTK+:
   + New Brazilian Portuguese, Chinese, Dutch, and Turkish translations
   + Fix 1.00 desktop internationalization error

1.00 (2008/01/04)
- All Platforms:
   + Port forwarding now performed by MiniUPnP and libnatpmp
   + Ability to set global and per-torrent number of connections
   + Option to prefer not using encryption
   + Fix tracker connection error
   + PEX is now configured globally
   + Updated icon
- OS X:
   + Redesigned Leopard-like look
   + Group labeling, filtering, and sorting
   + Statistics window
   + Pieces Bar (return of Advanced Bar)
   + Display "not available" overlay on the regular bar